Fixed java 9+ build